fix(controller): 修正GPU任务初始化参数传递错误 修复GPUDeviceController中initGPUTask方法调用时传递错误设备ID参数的问题，将deviceId改为device.getRealDeviceId()
refactor(service): 统一集合操作方法使用
将GPURealDevicesService中的toList()方法替换为collect(Collectors.toList())以保持代码风格一致性